modules/gdscript/tests/scripts/analyzer/errors/typed_array_assign_differently_typed.gd
func test():
	var differently: Array[float] = [1.0]
	var typed: Array[int] = differently
	print('not ok')
